--- a/src/components/QuizSummary.css
+++ b/src/components/QuizSummary.css
@@ -1,3 +1,7 @@
+.quiz-summary {
+  margin: 15px 0px 30px 0px;
+}
+
 .summary-container {
   text-align: center;
 }
@@ -58,38 +62,4 @@
 
 .restart-button:hover {
   background-color: #45a049;
-}
-
-/* Styling for the donut chart */
-.canvas-container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
-.doughnut-legend {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-.doughnut-legend-item {
-  display: inline-block;
-  margin-bottom: 10px;
-  margin-right: 10px;
-}
-
-.doughnut-legend-color {
-  display: inline-block;
-  width: 15px;
-  height: 15px;
-  margin-right: 5px;
-  vertical-align: middle;
-}
-
-.doughnut-legend-label {
-  display: inline-block;
-  vertical-align: middle;
 }
